# resume_build_react_fastapi_demo

./: README.md
backend/: README.md  pyproject.toml
backend/prompt/: resume_make.txt
backend/src/: app.py  resume_build_utils.py
frontend/: README.md
frontend/my-app/src/: App.js
