[tool.poetry]
name = "backend"
version = "0.1.0"
description = ""
authors = ["yusuke.shirai1 <yusuke.shirai1@persol.co.jp>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
openai = "^0.27.10"
python-dotenv = "^1.0.0"
fastapi = "^0.103.0"
uvicorn = "^0.23.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
